[package]
name = "libservo"
version = "0.1.0"
authors = ["Aliaksei Syrel <alex.syrel@gmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2.62"
glutin = "0.22.0-alpha3"
gleam = "0.6.20"
glium = "0.26.0-alpha3"
euclid = "0.20.1"
boxer = { git = "https://github.com/syrel/rust-boxer" }

libservo = { git = "https://github.com/servo/servo", rev = "6a4e6174a7287f769737ae7f588bc74fdf93bc49", features = ["canvas2d-azure", "layout-2020" ] }
embedder_traits = { git = "https://github.com/servo/servo", rev = "6a4e6174a7287f769737ae7f588bc74fdf93bc49" }
compositing = { git = "https://github.com/servo/servo", rev = "6a4e6174a7287f769737ae7f588bc74fdf93bc49" }
webvr = { git = "https://github.com/servo/servo", rev = "6a4e6174a7287f769737ae7f588bc74fdf93bc49" }
webxr-api = { git = "https://github.com/servo/webxr" }
webrender_api = { git = "https://github.com/servo/webrender" }
servo_geometry = { git = "https://github.com/servo/servo", rev = "6a4e6174a7287f769737ae7f588bc74fdf93bc49" }
servo-media = { git = "https://github.com/syrel/media", rev = "c680fa4b0064a7e8b877c8ab5ee8f98ce33132b0" }

[patch.'https://github.com/servo/media']
servo-media = { git = "https://github.com/syrel/media", rev = "c680fa4b0064a7e8b877c8ab5ee8f98ce33132b0" }
servo-media-dummy = { git = "https://github.com/syrel/media", rev = "c680fa4b0064a7e8b877c8ab5ee8f98ce33132b0" }
servo-media-gstreamer = { git = "https://github.com/syrel/media", rev = "c680fa4b0064a7e8b877c8ab5ee8f98ce33132b0" }

[patch.'https://github.com/servo/devices']
device = { git = "https://github.com/syrel/devices", rev = "d6c62e0873b2ec9a68c97a3370667e8b9a879cf4" }

[lib]
name = "Servo"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3